data/derived/sp14/progs/unify/prog0494.ml.out
Characters 34-44:
  if w = revexp(explode(w), "") then true else false;;
                ^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type string list
       Type char is not compatible with type string 
